removed api collections json, fixed spilling list:string widget

--- a/applications/welcome/static/css/web2py-bootstrap3.css
+++ b/applications/welcome/static/css/web2py-bootstrap3.css
@@ -57,7 +57,7 @@ ul.w2p_list {
 }
 .w2p_list li input {
     display: inline-block;
-    width: 90%;
+    width: 85%;
     margin-right: 4px;
 }
 .w2p_list li a {
